<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Glass Wiping</string>
    <string name="loading">loading&#8230;</string>
    <string name="feedback">Feedback</string>
    <string name="about_tip">Please follow our version update message if you can\'t access the content someday!</string>
    <string name="about">About</string>
    <string name="cache_clear">clear cache(takes %1$s)</string>
    <string name="email_choose">choose email</string>
    <string name="loading_tips">Image Loading&#8230;</string>
    <string name="camera">Camera</string>
    <string name="photo_album">Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="upload_photo">try upload your photo</string>
    <string name="network_invalid">network not available</string>
    <string name="server_error">server error, try later</string>
    <string name="click_text">Click to View Clear Picture</string>
    <string name="wechat_not_install">WeChat not installed, can\'t share by WeChat</string>
    <string name="weibo_not_install">Webo not installed, can\'t share by Webo</string>
    <string name="wechat_not_support">WeChat version too old, not support share</string>
    <string name="wechat_timeline_not_support">WeChat version too old, not support share to timeline</string>
    <string name="share_description">Invite your friends to wiping glass^_^</string>
    <string name="generating_image">Generating Image&#8230;</string>
    <string name="weibo_share_success">Share to Webo success!</string>
    <string name="weibo_share_fail">Share to Webo Fail!</string>
    <string name="photo_save_fail">Image Save Failed, Try Again!</string>
    <string name="photo_save_success">Saved To Gallery</string>
    <string name="image_browse">Image</string>
    <string name="easter_egg_tip">you triggered easter eggs!</string>
</resources>
