<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">
    <TextView
            android:id="@+id/btn_camera"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="#BBFFFFFF"
            android:gravity="center"
            android:textSize="15sp"
            android:text="@string/camera"
            android:textColor="@color/main_text_color"/>
    <TextView
            android:id="@+id/btn_gallery"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="#BBFFFFFF"
            android:layout_marginTop="2dp"
            android:gravity="center"
            android:textSize="15sp"
            android:text="@string/photo_album"
            android:textColor="@color/main_text_color"/>
    <TextView
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="#BBFFFFFF"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:textSize="15sp"
            android:text="@string/cancel"
            android:textColor="@color/main_text_color"/>
</LinearLayout>